cmake_minimum_required(VERSION 2.8)


PROJECT( TUB )

SET( CMAKE_CXX_FLAGS "-g " )
SET( CMAKE_DIR $ENV{CMAKE_DIR} )
SET(CMAKE_MODULE_PATH ${CMAKE_DIR})
SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib )

FIND_PACKAGE( LibUSB REQUIRED )

INCLUDE_DIRECTORIES( ${LibUSB_INCLUDE_DIRS} include)

ADD_SUBDIRECTORY( src )
#ADD_SUBDIRECTORY( examples )
#ADD_SUBDIRECTORY( utils )

SET(OPENCV "off" CACHE BOOL "With OpenCV support")

IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT) 
	SET(CMAKE_INSTALL_PREFIX /usr/local/ CACHE PATH "TuB install directory." FORCE) 
ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT) 



