
ADD_LIBRARY( tub SHARED tub.cxx)
TARGET_LINK_LIBRARIES(tub ${LibUSB_LIBRARIES})

SET( SOURCES test )

FOREACH( src ${SOURCES} )
	ADD_EXECUTABLE(${src} ${src}.cxx)
	TARGET_LINK_LIBRARIES(${src}  ${LibUSB_LIBRARIES})
ENDFOREACH(src)

FILE(GLOB HDRS "${CMAKE_SOURCE_DIR}/include/*.h")
INSTALL(FILES ${HDRS} DESTINATION include/tub)
INSTALL(TARGETS tub 
	LIBRARY DESTINATION lib
	ARCHIVE  DESTINATION lib)
